--- a/app/js/pages/SurveyListPage.hbs
+++ b/app/js/pages/SurveyListPage.hbs
@@ -7,7 +7,7 @@
 </style>
 
 <div>
-  <button type="button" id="add_survey" class="btn btn-primary btn-block">
+  <button type="button" id="add_survey" class="btn btn-primary btn-lg btn-block">
     <span class="glyphicon glyphicon-plus"></span>
     {{T "Start Survey"}}
   </button>
