--- a/app/js/pages/TestListPage.hbs
+++ b/app/js/pages/TestListPage.hbs
@@ -1,5 +1,5 @@
 <div>
-  <button type="button" id="add_test" class="btn btn-primary btn-block">
+  <button type="button" id="add_test" class="btn btn-primary btn-lg btn-block">
     <span class="glyphicon glyphicon-plus"></span>
     {{T "Start Water Test"}}
   </button>
