--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -50,7 +50,7 @@
 {{#if downloading}}
 <h4>Downloading data</h4>
 <div class="progress">
-  <div id="progress_bar" class="progress-bar" style="width: {{progress}}%;">
+  <div id="progress_bar" class="progress-bar progress-striped active" style="width: {{progress}}%;">
   </div>
 </div>
 {{/if}}
