--- a/app/js/pages/SensorPage.hbs
+++ b/app/js/pages/SensorPage.hbs
@@ -1,6 +1,4 @@
-<h4>Connection</h4>
-
-<div>Status: 
+<div>Connection Status: 
 {{#if connected}}
 <span class="text-success">{{status}}</span>
 {{/if}}
@@ -23,6 +21,15 @@
 </div>
 
 {{#if connected}}
+
+<h4>Status</h4>
+{{#if stats.enabled}}
+	<div class="lead text-success">Logging Enabled</div>
+	<button id="disable_logging" type="button" class="btn btn-default">Disable Logging</button>
+{{else}}
+	<div class="lead text-danger">Logging Disabled</div>
+	<button id="enable_logging" type="button" class="btn btn-primary">Enable Logging</button>
+{{/if}}
 
 <h4>Battery</h4>
 <div class="progress">
@@ -68,7 +75,7 @@
 	<div class="text-muted">Device UID: {{deviceUid}}</div>
 	<div class="text-muted">Ant+ Channel: {{channel}}</div>
 	<div class="text-muted">Firmware version: {{version}}</div>
-	<div class="text-muted">Status: {{#if recording}}Logging Enabled{{else}}Logging Disabled{{/if}}</div>
+	<div class="text-muted">Status: {{#if enabled}}Logging Enabled{{else}}Logging Disabled{{/if}}</div>
 	<div class="text-muted">Sample Rate: {{sampleRate}}</div>
 	<div class="text-muted">Records: {{totalRecords}} {{lowestRecord}}-{{highestRecord}}</div>
 {{/with}}
