--- a/app/js/pages/MainPage.hbs
+++ b/app/js/pages/MainPage.hbs
@@ -8,6 +8,10 @@
 </small>
 </div>
 
+{{#if outdated}}
+<div class="alert alert-warning">{{T "Your app is out of date. Please update in Google Play store."}}</div>
+{{/if}}
+
 <style>
 td {
 	font-weight: bold;
