--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -3,6 +3,14 @@
 	padding-left: 0;
 	padding-right: 0;
 }
+
+#navbar_slidemenu_button {
+	background: url(img/menu.png) no-repeat 0; 
+	width: 60px;
+	background-position: 15px 9px;
+	padding-bottom: 28px;
+	padding-left: 10px;
+}
 </style>
 
 <nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
@@ -18,7 +26,7 @@
 				<span id="navbar_title" style="padding-left: 3px;"></span>
 			</a>
 			<div style="float: right;">
-		  	  	<div id="navbar_slidemenu_button" class="menuitem" style="background: url(img/menu.png) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
+		  	  	<div id="navbar_slidemenu_button" class="menuitem">
 		    		&nbsp;
 		  		</div>
 		  	</div>
