--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -8,8 +8,7 @@
 	background: url(img/menu.png) no-repeat 0; 
 	width: 60px;
 	background-position: 15px 9px;
-	padding-bottom: 28px;
-	padding-left: 10px;
+	height: 50px;
 }
 </style>
 
