--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -6,8 +6,8 @@
 
 #navbar_slidemenu_button {
 	background: url(img/menu.png) no-repeat 0; 
-	width: 60px;
-	background-position: 15px 9px;
+	width: 50px;
+	background-position: 7px 9px;
 	height: 50px;
 }
 </style>
@@ -16,10 +16,10 @@
 	<div class="container container-nopadding">
 		<div class="navbar-header" style="width: 100%; margin-left: 0px; margin-right: 0px;">
 			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
-				style="margin-top: 16px; margin-left: 1px; float: left; color: white; visibility: visible;">
+				style="margin-top: 16px; margin-left: 1px; float: left; color: white; display: none;">
 			</span>
-			<a class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
-				<img id="brand_logo" src="img/black_logo_40.png" style="padding-top: 5px; display: none;">
+			<a id="brand_logo" class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
+				<img src="img/black_logo_40.png" style="padding-top: 5px">
 			</a>
 	  		<a class="navbar-brand" style="margin-left: -15px">
 				<span id="navbar_title" style="padding-left: 3px;"></span>
