--- a/app/js/ButtonBar.hbs
+++ b/app/js/ButtonBar.hbs
@@ -24,7 +24,7 @@
   </ul>  
   </div>
   {{else}}
-  <div id="{{id}}" class="menuitem" style="background: url(img/{{icon}}) no-repeat 0; width: 40px; margin-top: 8px; height: 35px;">
+  <div id="{{id}}" class="menuitem" style="background: url(img/{{icon}}) no-repeat 0; width: 50px; height: 50px; background-position: 10px 9px;">
     {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
   </div>
   {{/if}}
