Added pleasant loading info

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -37,6 +37,11 @@
 <div class="container" style="padding-left: 0px; padding-right: 0px;">
 	<div class="row" style="margin-left: 0px; margin-right: 0px;">
 		<div id="appview_content" class="col-md-12" style="padding-left: 0px; padding-right: 0px;">
+			<div id="appview_loading">
+				<div class="alert alert-info">
+					<span class="glyphicon glyphicon-cog"></span> {{T "Loading mWater App..."}}
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
