--- a/app/js/ButtonBar.hbs
+++ b/app/js/ButtonBar.hbs
@@ -14,7 +14,7 @@
 {{#each items}}
 <div style="float:right; position:relative;">
   {{#if menu}}
-  <div data-toggle="dropdown" style="background: url(img/{{icon}}) no-repeat 0; width: 50px; height: 50px; background-position: 10px 9px;">
+  <div data-toggle="dropdown" style="background: url(img/{{icon}}) black no-repeat 0; width: 50px; height: 50px; background-position: 10px 9px;">
     {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
   </div>
   <ul class="dropdown-menu" role="menu" style="right: 0; left: auto;">
@@ -24,7 +24,7 @@
   </ul>  
   </div>
   {{else}}
-  <div id="{{id}}" class="menuitem" style="background: url(img/{{icon}}) no-repeat 0; width: 50px; height: 50px; background-position: 10px 9px;">
+  <div id="{{id}}" class="menuitem" style="background: url(img/{{icon}}) black no-repeat 0; width: 50px; height: 50px; background-position: 10px 9px;">
     {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
   </div>
   {{/if}}
