--- a/app/js/pages/SettingsPage.hbs
+++ b/app/js/pages/SettingsPage.hbs
@@ -16,7 +16,7 @@
 {{#if showUpdates}}
 	<h4>{{T "Updates"}}</h4>
 
-	<div>Status: <span class="label label-{{updateClass}}">{{updateText}}</span></div>
+	<div>Status: <span class="text-{{updateClass}}">{{updateText}}</span></div>
 
 	<button id="update" class="btn btn-default" type="button" {{#if updating}}disabled="disabled"{{/if}}>{{T "Check for updates"}}</button>
 	{{#if updating}}
