--- a/app/js/pages/NewSurveyPage.hbs
+++ b/app/js/pages/NewSurveyPage.hbs
@@ -16,7 +16,7 @@
     </tr>
     {{else}}
     <tr>
-      <td> {{T "No surveys available. Please contact info@mwater.co to learn how to set one up"}} </td>
+      <td> {{T "If no surveys appear, please contact info@mwater.co to learn how to set one up"}} </td>
     </tr>
     {{/each}}
   </tbody>
