--- a/app/js/pages/SourcePage_surveys.hbs
+++ b/app/js/pages/SourcePage_surveys.hbs
@@ -2,7 +2,7 @@
 	{{#each surveys}}
 	<tr class="tappable survey" id="{{_id}}">
 	  <td><strong><span id="survey_name_{{_id}}"></span></strong></td>
-	  <td style="border-left:none;">{{formatDate started "%F"}}</td>
+	  <td style="border-left:none;">{{truncate started 10}}</td>
 	  <td>{{#if completed}}{{else}}<span class="text-warning"><b>{{T "Incomplete"}}</b></span>{{/if}}</td>
 	  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
