--- a/app/js/pages/TestListPage_items.hbs
+++ b/app/js/pages/TestListPage_items.hbs
@@ -7,7 +7,7 @@
 		<span class="text-muted">{{code}}</span>
 	  </td>
 	  <td style="border-left:none;"><strong>{{#if data.source}}{{T "Source"}} {{data.source}}{{/if}}</strong></td>
-	  <td style="border-left:none;">{{formatDate started "%F"}}</strong></td>
+	  <td style="border-left:none;">{{truncate started 10}}</strong></td>
 	  <td style="vertical-align:middle; border-left:none; width: 16px"><span class="glyphicon glyphicon-chevron-right"></span></td>
 	</tr>
 	{{else}}
