Slide in from left

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -20,25 +20,32 @@
 	max-width: 90%;
 	color: #ccc;
 }
+
+#brand_logo {
+	padding-top: 0;
+	padding-bottom: 0; 
+	padding-left: 0;
+	margin-left: 0;
+}
 </style>
 
 <nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
 	<div class="container container-nopadding">
 		<div class="navbar-header" style="width: 100%; margin-left: 0px; margin-right: 0px;">
-			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
-				style="margin-top: 16px; margin-left: 1px; float: left; color: white; display: none;">
-			</span>
-			<a id="brand_logo" class="navbar-brand" style="padding-top: 0; padding-bottom: 0; ">
-				<img src="img/black_logo_40.png" style="padding-top: 5px">
-			</a>
-	  		<a class="navbar-brand" style="margin-left: -15px">
-				<span id="navbar_title"></span>
-			</a>
-			<div style="float: right;">
+			<div style="float: left;">
 		  	  	<div id="navbar_slidemenu_button" class="menuitem">
 		    		&nbsp;
 		  		</div>
 		  	</div>
+			<span class="glyphicon glyphicon-chevron-left" id="navbar_back" 
+				style="margin-top: 16px; margin-left: 1px; float: left; color: white; display: none;">
+			</span>
+			<a id="brand_logo" class="navbar-brand" style="padding-left:0px">
+				<img src="img/black_logo_40.png" style="padding-top: 5px;">
+			</a>
+	  		<a class="navbar-brand" style="margin-left: -15px">
+				<span id="navbar_title"></span>
+			</a>
 	   		<div id="navbar_buttons">
 			</div>
 		</div>
