Made source map root page

--- a/app/js/PageMenu.hbs
+++ b/app/js/PageMenu.hbs
@@ -1,9 +1,9 @@
 <h3></h3>
 <ul>
-<li><a id="home"><span class="glyphicon glyphicon-home"></span> {{T "Home"}}</a></li>
+<!--<li><a id="home"><span class="glyphicon glyphicon-home"></span> {{T "Home"}}</a></li>-->
 <li><a id="login"><span class="glyphicon glyphicon-user"></span> {{T "Login"}}</a></li>
-<li><a id="source_list"><span class="glyphicon glyphicon-th-list"></span> {{T "List of Sources"}}</a></li>
 <li><a id="source_map"><span class="glyphicon glyphicon-map-marker"></span> {{T "Map of Sources"}}</a></li>
+<li><a id="source_list"><span class="glyphicon glyphicon-th-list"></span> {{T "List of Sources"}}</a></li>
 <li><a id="test_list"><span class="glyphicon glyphicon-tint"></span> {{T "Water Tests"}}</a></li>
 <li><a id="survey_list"><span class="glyphicon glyphicon-check"></span> {{T "Surveys"}}</a></li>
 <li><a id="settings"><span class="glyphicon glyphicon-cog"></span> {{T "Settings"}}</a></li>
