New button bar mostly there

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -5,7 +5,7 @@
 }
 
 #navbar_slidemenu_button {
-	background: url(img/menu.png) black no-repeat 0; 
+	background: url(img/buttonbar-slideout.png) black no-repeat 0; 
 	width: 50px;
 	background-position: 7px 9px;
 	height: 50px;
