--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -9,7 +9,21 @@
     margin-bottom: 10px;
     border-radius: 3px;
   }
+
+  #big_plus {
+  	/* Centered at bottom */
+	position: absolute;
+	bottom: 27px;
+	z-index: 100000;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+  }
+
 </style>
+
+<img id="big_plus" src="img/big-plus.png">
 
 <div id="map"></div>
 
