--- a/app/js/pages/SourceListPage.hbs
+++ b/app/js/pages/SourceListPage.hbs
@@ -1,11 +1,26 @@
+<style>
+/*  #big_plus {
+	position: absolute;
+	bottom: 27px;
+	z-index: 100000;
+	right: 27;
+  }
+*/</style>
+
+
 <div>
-  <div id="location_msg" class="alert alert-info">
-    {{T "Waiting for GPS location..."}}
-  </div>
-  <div id="search_bar" class="alert alert-info">
-    <button type="button" class="close" id="search_cancel">&times;</button>
-    {{T "Search results for:"}} <span id="search_text" style="font-weight:bold"></span>
-  </div>
-  <table class="table" id="table">
-  </table>
+	<h4>
+		<img id="big_plus" src="img/big-plus.png">
+		Nearby Sites
+	</h4>
+
+	<div id="location_msg" class="alert alert-info">
+		{{T "Waiting for GPS location..."}}
+	</div>
+	<div id="search_bar" class="alert alert-info">
+		<button type="button" class="close" id="search_cancel">&times;</button>
+		{{T "Search results for:"}} <span id="search_text" style="font-weight:bold"></span>
+	</div>
+	<table class="table" id="table">
+	</table>
 </div>
