--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -23,7 +23,7 @@
 
 </style>
 
-<img id="big_plus" src="img/big-plus.png">
+<img id="big_plus" src="img/big-plus-shadow.png">
 
 <div id="map"></div>
 
