--- a/app/js/pages/SourceListPage.hbs
+++ b/app/js/pages/SourceListPage.hbs
@@ -10,7 +10,7 @@
 
 <div>
 	<h4>
-		<img id="big_plus" src="img/big-plus.png">
+		<img id="big_plus" src="img/big-plus-shadow.png">
 		Nearby Sites
 	</h4>
 
