Fixed title bar wrap

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -35,6 +35,9 @@
 	padding-bottom: 0; 
 	padding-left: 0;
 	margin-left: 0;
+	position: absolute;
+	white-space: nowrap;
+	overflow: hidden;
 }
 </style>
 
@@ -49,7 +52,7 @@
 		    		&nbsp;
 		  		</div>
 		  	</div>
-			<a id="brand_logo" class="navbar-brand" style="padding-left:0px">
+			<a id="brand_logo" class="navbar-brand">
 				<img src="img/black_logo_40.png" style="padding-top: 5px;">
 			</a>
 	  		<span class="navbar-brand" style="margin-left: -15px">
