--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -10,6 +10,13 @@
     border-radius: 3px;
   }
 
+  .image-control {
+    padding: 6px 6px;
+    background: rgba(255,255,255,0.8);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 5px;
+  }
+
   #bottom_navbar {
     position: absolute;
     bottom: -50px;
@@ -24,15 +31,12 @@
 </style>
 
 <div id="bottom_navbar" class="text-center">
-  <div class="btn-group dropup pull-right">
+  {{! Move gear icon to right}}
+  <div class="btn-group dropup" style="position: absolute; right: 0;">
     <button type="button" class="btn btn-lg btn-link dropdown-toggle" data-toggle="dropdown">
       <span class="glyphicon glyphicon-cog"></span>
     </button>
-    <ul class="dropdown-menu dropdown-menu-right text-left" role="menu">
-      <li><a>My Sites</a></li>
-      <li><a>My Groups Sites</a></li>
-      <li class="divider"></li>
-      <li><a>Make Available Offline</a></li>
+    <ul id="gear_menu" class="dropdown-menu dropdown-menu-right text-left" role="menu">
     </ul>
   </div>  
   <div class="btn-group dropup">
