Add buttons in main screens present

--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -45,9 +45,9 @@
       Add
     </button>
     <ul class="dropdown-menu text-left" role="menu">
-      <li><a>Site</a></li>
-      <li><a>Survey</a></li>
-      <li><a>Water Test</a></li>
+      <li><a id="new_site">Site</a></li>
+      <li><a id="new_survey">Survey</a></li>
+      <li><a id="new_test">Water Test</a></li>
     </ul>
   </div>  
 </div>
