Android L look ready on main screens

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -35,6 +35,7 @@
 	padding-bottom: 0; 
 	padding-left: 0;
 	margin-left: 0;
+	left: 50px;
 	position: absolute;
 	white-space: nowrap;
 	overflow: hidden;
@@ -44,14 +45,12 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" id="header" style="background-color: black;">
 	<div class="container container-nopadding">
 		<div class="navbar-header" style="width: 100%; margin-left: 0px; margin-right: 0px;">
-			<div style="float: left;">
-		  	  	<div id="navbar_slidemenu_button" class="menuitem">
-		    		&nbsp;
-		  		</div>
-		  	  	<div id="navbar_back_button" class="menuitem" style="display: none">
-		    		&nbsp;
-		  		</div>
-		  	</div>
+	  	  	<div id="navbar_slidemenu_button" class="menuitem" style="float: left;">
+	    		&nbsp;
+	  		</div>
+	  	  	<div id="navbar_back_button" class="menuitem" style="display: none; float: left">
+	    		&nbsp;
+	  		</div>
 			<a id="brand_logo" class="navbar-brand">
 				<img src="img/black_logo_40.png" style="padding-top: 5px;">
 			</a>
