--- a/app/js/pages/SourceListPage.hbs
+++ b/app/js/pages/SourceListPage.hbs
@@ -15,12 +15,12 @@
   <div class="btn-group dropup">
     <button type="button" class="btn btn-link btn-lg dropdown-toggle" data-toggle="dropdown">
       <span class="glyphicon glyphicon-plus"></span>
-      Add
+        {{T "Add"}}
     </button>
     <ul class="dropdown-menu text-left" role="menu">
-      <li><a id="new_site">Site</a></li>
-      <li><a id="new_survey">Survey</a></li>
-      <li><a id="new_test">Water Test</a></li>
+      <li><a id="new_site">{{T "Site"}}</a></li>
+      <li><a id="new_survey">{{T "Survey"}}</a></li>
+      <li><a id="new_test">{{T "Water Test"}}</a></li>
     </ul>
   </div>  
 </div>
