--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -42,7 +42,7 @@
   <div class="btn-group dropup">
     <button type="button" class="btn btn-lg btn-link dropdown-toggle" data-toggle="dropdown">
       <span class="glyphicon glyphicon-plus"></span>
-      Add
+      {{T "Add"}}
     </button>
     <ul class="dropdown-menu text-left" role="menu">
       <li><a id="new_site">Site</a></li>
