Cleanup of icons

--- a/app/js/AppView.hbs
+++ b/app/js/AppView.hbs
@@ -35,8 +35,7 @@
 	padding-bottom: 0; 
 	padding-left: 0;
 	margin-left: 0;
-	left: 50px;
-	position: absolute;
+	position: relative;
 	white-space: nowrap;
 	overflow: hidden;
 }
