--- a/app/js/ButtonBar.hbs
+++ b/app/js/ButtonBar.hbs
@@ -39,7 +39,7 @@
   </ul>  
   </div>
   {{else}}
-  <div id="{{id}}" class="buttonbar-item" {{#if icon}}style="background: url(img/{{icon}}) black no-repeat 0;"{{/if}}>
+  <div id="{{id}}" class="buttonbar-item menuitem" {{#if icon}}style="background: url(img/{{icon}}) black no-repeat 0;"{{/if}}>
     {{#if text}}{{text}}{{else}}&nbsp;{{/if}}
   </div>
   {{/if}}
