--- a/app/js/pages/SourceMapPage.hbs
+++ b/app/js/pages/SourceMapPage.hbs
@@ -37,9 +37,9 @@
       {{T "Add"}}
     </button>
     <ul class="dropdown-menu text-left" role="menu">
-      <li><a id="new_site">Site</a></li>
-      <li><a id="new_survey">Survey</a></li>
-      <li><a id="new_test">Water Test</a></li>
+      <li><a id="new_site">{{T "Source"}}</a></li>
+      <li><a id="new_survey">{{T "Survey"}}</a></li>
+      <li><a id="new_test">{{T "Water Test"}}</a></li>
     </ul>
   </div>  
 </div>
