--- a/app/js/pages/MainPage.hbs
+++ b/app/js/pages/MainPage.hbs
@@ -1,17 +1,18 @@
 <div class="text-muted">
-<small>{{T "User:"}}
-<b>{{#if login}}{{login.user}}{{else}}{{T "Not logged in"}}{{/if}}</b>
-{{T "Sync:"}} 
-<span class="text-{{dataSyncClass}}">{{dataSyncText}}</span>
-{{#if lastSyncDate}}<b>{{timeago lastSyncDate}}</b>{{/if}}
-<span id="upserts_pending"></span>
-<span id="images_pending"></span>
-{{T "Version:"}} <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
-</small>
+	<small>
+		{{T "User:"}}
+		<b>{{#if login}}{{login.user}}{{else}}{{T "Not logged in"}}{{/if}}</b>
+		{{T "Sync:"}} 
+		<span class="text-{{dataSyncClass}}">{{dataSyncText}}</span>
+		{{#if lastSyncDate}}<b>{{timeago lastSyncDate}}</b>{{/if}}
+		<span id="upserts_pending"></span>
+		<span id="images_pending"></span>
+		{{T "Version:"}} <b>{{version}} {{#if baseVersion}}({{baseVersion}}){{/if}}</b>
+	</small>
 </div>
 
 {{#if outdated}}
-<div class="alert alert-warning">{{T "Your app is out of date. Please update in Google Play store."}}</div>
+	<div class="alert alert-warning">{{T "Your app is out of date. Please update in Google Play store."}}</div>
 {{/if}}
 
 <style>
