SiteEdit working. Dead code purged

--- a/app/js/pages/SettingsPage.hbs
+++ b/app/js/pages/SettingsPage.hbs
@@ -39,12 +39,12 @@
 {{/if}}
 
 
-{{#if offlineSourceCodes}}
-<h4>{{T "Offline Source Creation"}}</h4>
+{{#if offlineSiteCodes}}
+<h4>{{T "Offline Site Creation"}}</h4>
 <div>
-    {{T "Number of sources that can be created offline:"}} <b>{{offlineSourceCodes}}</b>
+    {{T "Number of sites that can be created offline:"}} <b>{{offlineSiteCodes}}</b>
 </div>
-<button id="request_source_codes" class="btn btn-default" type="button">{{T "Request more"}}</button>
+<button id="request_site_codes" class="btn btn-default" type="button">{{T "Request more"}}</button>
 {{/if}}
 
 <h4>{{T "Advanced"}}</h4>
