--- a/app/js/pages/SignupPage.hbs
+++ b/app/js/pages/SignupPage.hbs
@@ -4,7 +4,7 @@
     <div class="form-group">
         <label for="signup_username">{{T "Username"}}</label>
         <input class="form-control" id="signup_username" type="text" autocapitalize="off" autocorrect="off" spellcheck="false" placeholder="{{T "Username"}}" />
-        <span class="help-block">{{T "Note: Your username is visible on water sources you create"}}</span>
+        <span class="help-block">{{T "Note: Your username is visible on sites you create"}}</span>
     </div>
     <div class="form-group">
         <label for="signup_password">{{T "Password"}}</label>
