--- a/app/js/pages/SiteListPage.hbs
+++ b/app/js/pages/SiteListPage.hbs
@@ -18,7 +18,7 @@
         {{T "Add"}}
     </button>
     <ul class="dropdown-menu text-left" role="menu">
-      <li><a id="new_site">{{T "Source"}}</a></li>
+      <li><a id="new_site">{{T "Site"}}</a></li>
       <li><a id="new_survey">{{T "Survey"}}</a></li>
       <li><a id="new_test">{{T "Water Test"}}</a></li>
     </ul>
