--- a/app/js/pages/SitePage.hbs
+++ b/app/js/pages/SitePage.hbs
@@ -73,21 +73,23 @@
             <h4>{{T "Location"}}</h4>
             <div id="location"></div>
 
-            <div id="status">
-              <h4>{{T "Status"}}</h4>
-              <span class="text-muted">{{T "Loading..."}}</span>
-            </div>
+            {{#if isWaterPoint}}
+              <div id="status">
+                <h4>{{T "Status"}}</h4>
+                <span class="text-muted">{{T "Loading..."}}</span>
+              </div>
 
-            <button id="add_test_button" class="btn btn-default pull-right margined"><span class="glyphicon glyphicon-plus-sign"></span> {{T "Add"}}</button>
-            <h4 class="buttoned">{{T "Water Tests"}}</h4>
-            <table id="tests" class="table"></table>
+              <button id="add_test_button" class="btn btn-default pull-right margined"><span class="glyphicon glyphicon-plus-sign"></span> {{T "Add"}}</button>
+              <h4 class="buttoned">{{T "Water Tests"}}</h4>
+              <table id="tests" class="table"></table>
 
-            <button id="add_note_button" class="btn btn-default pull-right margined"><span class="glyphicon glyphicon-plus-sign"></span> {{T "Add"}}</button>
-            <h4 class="buttoned">{{T "Status Updates"}}</h4>
-            <table id="notes" class="table"></table>
-    
-            <h4 class="buttoned">{{T "Surveys"}}</h4>
-            <table id="surveys" class="table"></table>
+              <button id="add_note_button" class="btn btn-default pull-right margined"><span class="glyphicon glyphicon-plus-sign"></span> {{T "Add"}}</button>
+              <h4 class="buttoned">{{T "Status Updates"}}</h4>
+              <table id="notes" class="table"></table>
+      
+              <h4 class="buttoned">{{T "Surveys"}}</h4>
+              <table id="surveys" class="table"></table>
+            {{/if}}
         </div>
     </div>
     <div class="row">
