--- a/app/js/pages/SiteListPage.hbs
+++ b/app/js/pages/SiteListPage.hbs
@@ -9,6 +9,10 @@
     right: 0;
     background-color: white;
   }
+
+  .bottom-padded {
+    padding-bottom: 50px;
+  }
 </style>
 
 <div id="bottom_navbar" class="text-center">
@@ -25,7 +29,7 @@
   </div>  
 </div>
 
-<div>
+<div class="bottom-padded">
 	<div id="location_msg" class="alert alert-info">
 		{{T "Waiting for GPS location..."}}
 	</div>
