--- a/app/js/pages/TestListPage.hbs
+++ b/app/js/pages/TestListPage.hbs
@@ -9,6 +9,10 @@
     right: 0;
     background-color: white;
   }
+
+  .bottom-padded {
+    padding-bottom: 50px;
+  }
 </style>
 
 <div id="bottom_navbar" class="text-center">
@@ -18,7 +22,7 @@
   </button>
 </div>
 
-<div>
+<div class="bottom-padded">
   <h4>{{T "Incomplete Tests"}}</h4>
   <table class="table" id="incomplete_table">
   </table>
