--- a/app/js/pages/SurveyListPage.hbs
+++ b/app/js/pages/SurveyListPage.hbs
@@ -15,6 +15,10 @@
     right: 0;
     background-color: white;
   }
+
+  .bottom-padded {
+    padding-bottom: 50px;
+  }
 </style>
 
 <div id="bottom_navbar" class="text-center">
@@ -25,7 +29,7 @@
 </div>
 
 
-<div>
+<div class="bottom-padded">
   <h4>{{T "Incomplete Surveys"}}</h4>
   <table class="table" id="incomplete_table">
   </table>
